# FastCMake

./: FastCMake.sln  README.md
FastCMake/: CMakeLists.txt  FastCMake.vcxproj  FastCMake.vcxproj.filters
FastCMake/Assets/: CMakeLists.txt  log.cpp  log.h  main.cpp  utility.cpp  utility.h
FastCMake/Source/: Generator.cpp  Generator.h  main.cpp
